--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -129,11 +129,15 @@
   <ItemGroup>
     <ClInclude Include="Engine.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="InputController.hpp" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="StateMachine.hpp" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="InputController.cpp" />
+    <ClCompile Include="StateMachine.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Engine.rc" />
