--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="GeometryHandler.h" />
     <ClInclude Include="InputController.h" />
     <ClInclude Include="ComponentRenderMesh.h" />
     <ClInclude Include="GameTimer.h" />
@@ -151,6 +152,7 @@
     <ClCompile Include="ComponentScript.cpp" />
     <ClCompile Include="DDSTextureLoader.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="GeometryHandler.cpp" />
     <ClCompile Include="InputController.cpp" />
     <ClCompile Include="ComponentRenderMesh.cpp" />
     <ClCompile Include="GameTimer.cpp" />
