--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="DDSTextureLoader.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GeometryHandler.h" />
     <ClInclude Include="InputController.h" />
@@ -152,6 +153,7 @@
     <ClCompile Include="ComponentScript.cpp" />
     <ClCompile Include="DDSTextureLoader.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GeometryHandler.cpp" />
     <ClCompile Include="InputController.cpp" />
     <ClCompile Include="ComponentRenderMesh.cpp" />
