--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="ComponentScript.h" />
     <ClInclude Include="d3dx12.h" />
     <ClInclude Include="DDSTextureLoader.h" />
+    <ClInclude Include="Effect.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GameManager.h" />
@@ -145,6 +146,7 @@
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Transform.h" />
     <ClInclude Include="Utile.h" />
   </ItemGroup>
   <ItemGroup>
@@ -153,6 +155,7 @@
     <ClCompile Include="ComponentCollider.cpp" />
     <ClCompile Include="ComponentScript.cpp" />
     <ClCompile Include="DDSTextureLoader.cpp" />
+    <ClCompile Include="Effect.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GeometryHandler.cpp" />
@@ -161,6 +164,7 @@
     <ClCompile Include="GameTimer.cpp" />
     <ClCompile Include="InitApp.cpp" />
     <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="Transform.cpp" />
     <ClCompile Include="Utile.cpp" />
     <ClCompile Include="GameObject.cpp" />
   </ItemGroup>
