--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -133,6 +133,7 @@
     <ClInclude Include="ComponentScript.h" />
     <ClInclude Include="d3dx12.h" />
     <ClInclude Include="DDSTextureLoader.h" />
+    <ClInclude Include="defineKey.h" />
     <ClInclude Include="Effect.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="framework.h" />
