--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="Shader.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Transform.h" />
+    <ClInclude Include="UploadBuffer.h" />
     <ClInclude Include="Utile.h" />
   </ItemGroup>
   <ItemGroup>
