--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -136,6 +136,7 @@
     <ClInclude Include="DDSTextureLoader.h" />
     <ClInclude Include="Effect.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="EngineStateMachine.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="GameObject.h" />
@@ -159,6 +160,7 @@
     <ClCompile Include="DDSTextureLoader.cpp" />
     <ClCompile Include="Effect.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="EngineStateMachine.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GeometryHandler.cpp" />
     <ClCompile Include="InputController.cpp" />
