--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="Effect.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="EngineStateMachine.h" />
+    <ClInclude Include="FrameResource.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="EngineManager.h" />
     <ClInclude Include="EngineObject.h" />
@@ -163,6 +164,7 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="EngineStateMachine.cpp" />
     <ClCompile Include="EngineManager.cpp" />
+    <ClCompile Include="FrameResource.cpp" />
     <ClCompile Include="GeometryHandler.cpp" />
     <ClCompile Include="InputController.cpp" />
     <ClCompile Include="ComponentRenderMesh.cpp" />
