--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClInclude Include="SplashScreen.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
