--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -178,7 +178,9 @@
     <ResourceCompile Include="Engine.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Bruno.dds" />
     <Image Include="Engine.ico" />
+    <Image Include="Metal.dds" />
     <Image Include="small.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
