test pour le splash screen (marche pas)

--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -47,7 +47,7 @@
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="test.hlsl" />
+    <Image Include="test.jpg" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
