--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -91,8 +91,8 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="test.hlsl">
-      <Filter>Fichiers sources</Filter>
-    </FxCompile>
+    <Image Include="test.jpg">
+      <Filter>Fichiers de ressources</Filter>
+    </Image>
   </ItemGroup>
 </Project>
